front-end/src/index.css
@import "tailwindcss";

html, body, #root {
  height: 100%;
}

@theme {
  --color-defaultbackground: #0f1219;
  --color-blue-980: #11182b;
}

body {
  background-color: #0f1219;
  color: white;
}

* {
  font-family: "Montserrat", sans-serif;
}

